Fix parametric surface example

--- a/examples/parametric_surface.html
+++ b/examples/parametric_surface.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<script type="text/javascript" src="//unpkg.com/asynchronous-interactive"></script>
-<script type="text/javascript" src="//unpkg.com/math-expressions"></script>
+<script type="text/javascript" src="https://unpkg.com/asynchronous-interactive"></script>
+<script type="text/javascript" src="https://unpkg.com/math-expressions"></script>
 <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
 </script><title>Parametric surface example</title>
 </head>
 <body>
 <h3>Parametric surface example</h3>
 <div class="asynchronous-interactive" data-src="parametric_surface.js" data-width="300" data-height="300"></div>
-
-
 </body>
 </html>
