Make text labels look nice

--- a/examples/simple_example.html
+++ b/examples/simple_example.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <h1>Simple three.js math library example</h1>
+    <div id="display-container"></div>
   </body>
 </html>
