--- a/examples/simple_example.html
+++ b/examples/simple_example.html
@@ -7,7 +7,7 @@
     <script src="./simple_example.js"></script>
     <script src="../js/OrbitControls.js"></script>
     <script src="../js/TextLabel.js"></script>
-    <script src="../js/NewAxes.js"></script>
+    <script src="../js/Axes.js"></script>
     <script src="../js/Defaults.js"></script>
   </head>
   <body>
