Progress on encapsulating surfaces

--- a/examples/simple_example.html
+++ b/examples/simple_example.html
@@ -9,6 +9,7 @@
     <script src="../js/TextLabel.js"></script>
     <script src="../js/Axes.js"></script>
     <script src="../js/Defaults.js"></script>
+    <script src="../js/ParametricSurface.js"></script>
   </head>
   <body>
     <h1>Simple three.js math library example</h1>
